<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffc6c6be">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SetImageAsWP"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@android:dimen/thumbnail_height"
        android:id="@+id/wpImageView"
        android:contentDescription="image to wallpaper"
        android:src="@drawable/ggstyle"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_setwallpaper"
            android:id="@+id/btnChangeWallpaper"
            android:onClick="setWallPaper"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="#ff6ca49a"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ServiceTxt"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="5dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_startService"
                android:id="@+id/btnStartService"
                android:onClick="startService"
                android:padding="10dp"
                android:background="#ff59b24c"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_stopService"
                android:id="@+id/btnStopService"
                android:onClick="stopService"
                android:padding="10dp"
                android:background="#ff982428"
                android:layout_gravity="center"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
